2004/03/01 03:50 (+0100) kaffeetisch

	A t/GtkTreeModelIface.t: New test for the custom tree model stuff.

	* t/GdkEvent.t: Use the same window in multiple places.  Test
	Gtk2::Gdk::setting_get.  Skip the
	Gtk2::Gdk::Event::Selection::requestor test on Win32.

	* t/GdkEvent.t
	* xs/GdkEvent.xs: Bind and test handler_set.

	* t/GtkMenuItem.t
	* xs/GtkMenuItem.xs: Use a custom marshaller for the
	toggle_size_request signal since it uses a pointer to an integer
	as a means to return a value from a signal handler.  Bind and test
	toggle_size_request and toggle_size_allocate.

	* t/GtkTreeModel.t
	* xs/GtkTreeModel.xs: Bind and test ref_node and unref_node.

2004/03/01 01:54 (+0100) kaffeetisch

	* t/GtkFileChooser.t
	* xs/GtkFileChooser.xs: Bind and test [sg]et_use_preview_label.

2004/02/29 05:09 (-0500) muppetman

	* t/GtkWidget.t: skip style_get on 2.0.x; we can't implement style_get
	without gtk_widget_class_find_style_property, which wasn't added until
	2.2.0.

	* t/GtkIconFactory.t: skip Gtk2::IconSize::lookup_for_settings on
	2.0.x.

	* t/GtkRc.t: Gtk2::Rc::reparse_all_for_settings seems to return
	something different values on different machines/versions/etc.
	just verify that we don't crash, don't check the value.

2004/02/29 04:37 (-0500) muppetman

	* Makefile.PL, xs_files-2.0: only build xs/GdkX11.xs when linking\
	against the x11 gtk target.

	* api.pod: updated

	* gtk-demo/editable_cells.pl, tools/podifyenums.pl, xs/GdkScreen.xs,
	xs/GtkActionGroup.xs, xs/GtkContainer.xs, xs/GtkTreeModel.xs,
	xs/GtkTreeSelection.xs: remove outdated FIXME

	* t/01.GtkWindow.t: implement a test for set_default

	* t/GdkCursor.t: test new_from_pixmap

	* t/GdkDnd.t: re-enable GdkDnd.t in hopes that its brokenness will
	get it fixed

	* xs/Gdk.xs: use runtime version check rather than compile-time check
	to get around leak bug

	* xs/GtkComboBoxEntry.xs, xs/GtkRadioMenuItem.xs, xs/GtkRc.xs,
	xs/GtkStyle.xs, xs/GtkTreeViewColumn.xs: use C comment rather than